<resources>
    <string name="app_name" translatable="false">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="map_api_key" translatable="false">AIzaSyAI33cAhSYPAd_Z-DHoRtO8a4x4lIFMPeU</string>
    <string name="weatherApp" translatable="false">Weather App</string>
    <string name="grade">C</string>
    <string name="degree" translatable="false">°</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="ultraViolet">UltraViolet</string>
    <string name="visibility">Visibility</string>
    <string name="cloud">cloud</string>
    <string name="notification">Notification</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="alarm">Alarm</string>
    <string name="alerts">Alerts</string>
    <string name="meter_sec">Meter/ Sec</string>
    <string name="mile_hour">Mile/ Hour</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>